[package]
name = "dawnsky"
version = "0.1.0"
edition = "2021"

[profile.release]
opt-level = 3
codegen-units = 1
lto = true
incremental = false

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"

[lints.rust]
unused_imports = "allow"
unused_variables = "allow"

[dependencies]
dioxus = { version = "0.6.3", features = [ "html", "router"] }
dioxus-html = { version = "*", features = ["file_engine"] }
manganis = "*"
dioxus-logger = { version = "*" }
dioxus-sdk = { version = "*", features = ["storage"] }
tracing = "*"
serde = "1.0"
serde_json = { version = "1.0" }
reqwest = { version = "0.12", features = ["json"] }
http = { version = "1" }
chrono = { version = "0.4", features = ["serde"] }
opendal = { version = "0.51", default-features = false, features = ["services-s3"] }
futures = "0.3"
derive_more = { version = "2.0", features = ["display", "from_str", "deref"] }
jwt-compact = { version = "0.8" }
anyhow = "1.0"
thiserror = "2.0"
once_cell = "1.20"
ciborium = "0.2"
async-lock = "3.4"
async-once-cell = "0.5"
bsky-sdk = { version = "0.1" }
atrium-api = { version = "0.24", default-features = false, features = ["bluesky"] }
ipld-core = "0.4"
# web only
dioxus-web = { version = "0.6", optional = true }
gloo-timers = { version = "0.3", optional = true, features = ["futures"] }
gloo-storage = { version = "0.3.0", optional = true }
web-sys = { version = "0.3", optional = true, features = ["Window", "Navigator"] }
js-sys = { version = "0.3", optional = true }
serde_urlencoded = "0.7"
# mobile only
dioxus-mobile = { version = "0.6", optional = true }

opendal_indexeddb = { path = "opendal_indexeddb" }

[features]
default = []
web = [
    "dioxus/web", "dioxus-web",
    "gloo-timers", "gloo-storage",
    "web-sys", "js-sys",
]
mobile = ["dioxus/mobile"]

[build]
target = ["wasm32-unknown-unknown"]
